[package]
name = "ait_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
chrono = "0.4.26"
uuid = { version = "1.4.1", features = ["v4"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
roaring = "0.10.1"
memuse = "0.2.1"
clap = { version = "4.3.19", features = ["derive"] }